--- a/project main/test.html
+++ b/project main/test.html
@@ -155,7 +155,8 @@
             <img class="card-img-top" src="images/Laptop-Asus-ROG-G533QM-HQ074T.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Laptop Asus Gaming ROG Strix G533QM-HQ074T</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">I7-10870H/8GB RAM/512GB SSD/15.6 FHD 144hz/GTX 1650Ti 4GB/Win10/Black</p>
+			  <span class="price-product">1600$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -165,7 +166,8 @@
             <img class="card-img-top" src="images/macbook-air13.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Apple Macbook Air 13 (MGN63SA/A)</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Apple M1/8GB RAM/256GB SSD/13.3 inch IPS/Mac OS/Gray (NEW)</p>
+			  <span class="price-product">1100$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -175,7 +177,8 @@
             <img class="card-img-top" src="images/acer-swift 3xsf314.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Laptop Acer Swift 3X SF314-510G-57MR </h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">NX.A10SV.004 I5-1135G7/8GB RAM/512GB SSD/14.0 FHD/Win10/Vàng (2020)</p>
+			  <span class="price-product">900$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -187,7 +190,8 @@
             <img class="card-img-top" src="images/dell-mobile-precision-3550.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Laptop Dell Workstation Mobile Precision 3550 </h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">I7-10810U/16GB RAM/256GB SSD/Quadro P520 2G/15.6 inch FHD/Ubuntu/Gray</p>
+			  <span class="price-product">1550$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -197,7 +201,8 @@
             <img class="card-img-top" src="images/sony a7.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Camera Sony Alpha ILCE-7RM3/ A7RM3 Body</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">ISO 100-32000/Exmor CMOS 42.4 megapixels/Speed/30-1/8000/LCD 3.0inch/657g/Black</p>
+			  <span class="price-product">2100$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -206,8 +211,9 @@
           <div class="card">
             <img class="card-img-top" src="images/camera-cannon-efm15-45.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Camera Canon EOS 80D kit EF-S18-135mm F3.5-5.6 IS USM</h5>
-              <p class="card-text">Whether raising your game to SLRt photography with a feature-rich.</p>
+              <h5 class="card-title">Camera Canon EOS-80D-kit EF-S18-135mm IS USM</h5>
+              <p class="card-text"> ISO 100-12800/CMOS 24.2 megapixels/LCD 3.0inch/Speed 30- 1/8000s/650g/Black </p>
+			  <span class="price-product">1000$</span><br>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
           </div>
@@ -222,24 +228,31 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/asus-zenbook.jpg" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Laptop Asus ZenBook UX435EA-A5036T</h5>
+                Get more done, with less effort. Immersive Four Sides Display. Smart touchpad, 
+				evolved. More likely, All-round great performance. ZenBook 14's sound system is 
+				certified by audio experts to ensure crystal-clear, immersive sound
+				
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/dell-7490.jpeg" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Laptop Dell Inspiron 7490 LTDL101- 6RKVN1</h5>
+                Configuration for office, light game.he size of an old-fashioned 13.3-inch laptop.
+				Dell Inspiron 7490 laptop has a slim, stylish, modern design.It is equipped with 
+				Intel's 10th generation.Dell Inspiron 7490 laptop has a 14.0-inch Full HD screen.
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/macbook-pro13.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Apple Macbook Pro 13 Touchbar - MYD92SA/A</h5>
+                Monolithic design from recycled metal:MacBook Pro is only 15.6 mm thin and light, weighing 1.4 kg. 
+				Graphics performance is 2.8x higher than previous generation with new M1 chip.Trendy thin bezel premium 
+				Retina display Retina .
               </div>
             </li>
           </ul>
@@ -247,24 +260,29 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/acer-helios300.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Laptop Acer Gaming Predator Helios 300 PH315-53-70U6 </h5>
+				Laptop Acer is weight only 2.2kg, users can easily carry it anywhere without being too heavy.The laptop 
+				is equipped with a chiclet keyboard.A lot of necessary connection ports so that gamers can fight and exchange
+				data quickly.
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/laptop-probook-hp430gb.jpg" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Laptop HP ProBook 430 G8 LTHP907-2H0P0PA</h5>
+                Compact, slim, easy to carry from place to place. Enjoy 84%+ screen-to-body 
+				ratio, 13.3-inch diagonal size with FHD resolution, responsive and quiet keyboard.Multi-layer protection.Powered by 
+				the latest 11th Gen Intel Core i processors.
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/hp-pavilion15.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Laptop HP Gaming Pavilion 15-DK1159TX (31J36PA)</h5>
+				HP Gaming Pavilion is the choice worth your attention and ownership. this laptop.The laptop improves gaming performance 
+				with GeForce GTX 1650Ti graphics and Intel® Core i7-10750H.Professional gaming monitor Design.
               </div>
             </li>
           </ul>
@@ -272,24 +290,27 @@
         <div class="col-lg-4">
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/camera-cannon-efm15-45.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Camera Fujifilm X - T4 Kit XF16-80MM(Black)</h5>
+				Sensor: X-Trans CMOS 4 26.1MP. Maximum resolution: 6240 x 4160. Aspect ratio: 1:1, 3:2, 16:9. Stabilization mode: Sensor-
+				Shift, 5-axis. ISO range: 160 - 12800 (expandable 80 - 51200). Video recording: 4K59.94fps
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/cannon-kit-rf24.jpg" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Camera Canon EOS RP kit RF24-105mm F4-7.1 IS STM</h5>
+				26.2MP full-frame CMOS sensor. DIGIC 8 image processor. ISO: 100 - 40,000 (possible) expandable to 50, 51200, 102,400. 
+				Vari-Angle touch screen. Dual Pixel CMOS AF focusing system. 4K video support. Weight: 485g
               </div>
             </li>
             <li class="media">
-              <img class="mr-3" src="images/100X125.gif" alt="Generic placeholder image">
+              <img class="mr-3" src="images/kodak-sport.png" alt="Generic placeholder image">
               <div class="media-body">
-                <h5 class="mt-0 mb-1">List-based media object</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0 mb-1">Kodak WPZ2 - WATERPROOF CAMERA</h5>
+                Kodak sport is 4x Optical Zoom. 16MP BSI CMOS Sensor. 1080p HD Video. Digital Image Stabilization. Camera withstands water 
+				pressure from 15m Waterproof. 2m Shockproof, 2.7" 230K LCD. Rechargeable Li-ion Battery
               </div>
             </li>
           </ul>
