--- a/project main/test.html
+++ b/project main/test.html
@@ -85,21 +85,21 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="images/banner-computer.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Laptop Asus Lamborghini VX7</h5>
-                  <p>Break All Configurations</p>
+                <div class="carousel-caption d-block">
+                  <h5><span>Laptop Asus Lamborghini VX7</span></h5>
+                  <p><span>Break All Configurations</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="images/banner-camera.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                   <h5>Sony Alpha A7 Kit 28-70mm</h5>
                   <p>Removable Lens</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="images/banner-combo.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                   <h5>Rampage MEEPO PLUS Combo</h5>
                   <p>Best Price</p>
                 </div>
