--- a/project main/test.html
+++ b/project main/test.html
@@ -158,7 +158,7 @@
               <h5 class="card-title">Laptop Asus Gaming ROG Strix G533QM-HQ074T</h5>
               <p class="card-text">I7-10870H/8GB RAM/512GB SSD/15.6 FHD 144hz/GTX 1650Ti 4GB/Win10/Black</p>
 			  <span class="price-product">1600$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
               <h5 class="card-title">Apple Macbook Air 13 (MGN63SA/A)</h5>
               <p class="card-text">Apple M1/8GB RAM/256GB SSD/13.3 inch IPS/Mac OS/Gray (NEW)</p>
 			  <span class="price-product">1100$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -180,7 +180,7 @@
               <h5 class="card-title">Laptop Acer Swift 3X SF314-510G-57MR </h5>
               <p class="card-text">NX.A10SV.004 I5-1135G7/8GB RAM/512GB SSD/14.0 FHD/Win10/Vàng (2020)</p>
 			  <span class="price-product">900$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
               <h5 class="card-title">Laptop Dell Workstation Mobile Precision 3550 </h5>
               <p class="card-text">I7-10810U/16GB RAM/256GB SSD/Quadro P520 2G/15.6 inch FHD/Ubuntu/Gray</p>
 			  <span class="price-product">1550$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
               <h5 class="card-title">Camera Sony Alpha ILCE-7RM3/ A7RM3 Body</h5>
               <p class="card-text">ISO 100-32000/Exmor CMOS 42.4 megapixels/Speed/30-1/8000/LCD 3.0inch/657g/Black</p>
 			  <span class="price-product">2100$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
               <h5 class="card-title">Camera Canon EOS-80D-kit EF-S18-135mm IS USM</h5>
               <p class="card-text"> ISO 100-12800/CMOS 24.2 megapixels/LCD 3.0inch/Speed 30- 1/8000s/650g/Black </p>
 			  <span class="price-product">1000$</span><br>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <a href="#" class="btn btn-info">Add to Cart</a>
             </div>
           </div>
         </div>
