--- a/project main/test.html
+++ b/project main/test.html
@@ -71,8 +71,8 @@
     </nav>
 	  
   <div class="row">
-  <div name ="left" class="col-3" >Left</div>
-  <div name = "content" class="col-8 ">Content
+  <div name ="left" id="left" class="col-2" >Left</div>
+  <div name = "content" class="col-9 ">Content
 		<div class="container mt-3">
       <div class="row">
         <div class="col-12">
