--- a/project main/test.html
+++ b/project main/test.html
@@ -327,8 +327,8 @@
           <div class="col-sm-6 col-md-4 col-lg-4 col-12">
             <ul class="list-unstyled">
               <h3><a href="#" style="text-decoration: none;color: white;">About us</a></h3>
-			  <p>Holoshop was established since 2021.We sell camera, computer and device computer.
-				If you need advice more, you can contact the website or go to the store directly...</p>
+			  <p>Holoshop was established since 2021. We sell cameras, computers and computer devices.
+				If you need advice more, you can contact the website or go to the store directly.</p>
               
             </ul>
           </div>
