--- a/project main/test.html
+++ b/project main/test.html
@@ -60,7 +60,8 @@
                   <a class="dropdown-item" href="#">Mouse</a></div>
             </li>
             
-            <li class="nav-item"> <a class="nav-link" href="#">About us</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="#">About us</a></li>
+			  
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -109,7 +110,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="w-100" src="images/banner-camera.jpg" alt="Second slide">
+                <img class="d-block w-100" src="images/banner-camera.jpg" alt="Second slide">
                 <div class="carousel-caption d-block">
                   <h5>Sony Alpha A7 Kit 28-70mm</h5>
                   <p>Removable Lens</p>
