--- a/project main/About us.html
+++ b/project main/About us.html
@@ -19,7 +19,7 @@
 		  	</div>
 	  		<div id ="headerLinks">
 				
-                <a href="#" title="Register-login">Register/Login</a>
+                <a href="Login-Register.html" title="Register-login">Register/Login</a>
 				<a href="#" title="Cart">Cart</a></div>
 					</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
