--- a/project main/Feedback.html
+++ b/project main/Feedback.html
@@ -18,7 +18,7 @@
 				<img src="images/main logo.png" alt="sample logo" >
 		  	</div>
 	  		<div id ="headerLinks">
-				<a href="#" title="Login/Register">Login/Register</a>
+				<a href="Login-Register.html" title="Login/Register">Login/Register</a>
 				<a href="#" title="Cart">Cart</a></div>
 					</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
