--- a/project main/About us.html
+++ b/project main/About us.html
@@ -97,74 +97,13 @@
       <div class="row">
         <div class="col-12">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/banner-computer.jpg" alt="First slide">
-                <div class="carousel-caption d-block">
-                  <h5><span>Laptop Asus Lamborghini VX7</span></h5>
-                  <p><span>Break All Configurations</span></p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner-camera.jpg" alt="Second slide">
-                <div class="carousel-caption d-block">
-                  <h5>Sony Alpha A7 Kit 28-70mm</h5>
-                  <p>Removable Lens</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner-combo.jpg" alt="Third slide">
-                <div class="carousel-caption d-block">
-                  <h5>Rampage MEEPO PLUS Combo</h5>
-                  <p>Best Price</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-          </div>
+           
         </div>
       </div>
       <hr>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/free-ship.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Free Shipping</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/free-return.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Free Returns</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/low-price.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Low Prices</h4>
-            </div>
-          </div>
-        </div>
-      </div>
+     
     </div>
     <hr>
   
@@ -176,6 +115,25 @@
 		We want satisfy every people buy laptop or camera in Holoshop.
 		</p>
 		<p><img src="images/img-holoshop.jpg" width="800" height="400"></p><br>
+		<h2>How it works</h2>
+		<div class="how-work">
+		<div class="select-device">
+        <h4>Select Device</h4>
+		<br>
+		<img src="images/select-device.png" width="200" height="200">
+		<p>Start by searching your device above. You can also find it by category, brand and model.</p>
+		</div>
+		<div class="give-detail">
+		<h4> Give us detail</h4><br>
+		<img src="images/give-detail.png" width="200" height="200">
+		<p>Answer a few questions about the computer and price you can buy. We will consult you the best price. </p>
+		</div>
+		<div class="ship-ping">
+        <h4>We will ship its</h4><br>
+		<img src="images/ship-ping.png" width="200" height="200">
+		<p>Print out your pre-paid shipping label, pack your device and shipping for you.</p>
+		</div>
+		</div>
 		<h2>Location store</h2>
 		<p>Find store at 150 Quitman, Wa. If you don't find it, please call us (+84) 0166-666-666. We alway wait you or you 
 		can shopping online. Our Website use easy and formal.If you need advice more, you can contact the website or go to 
