--- a/project main/Login-Register.html
+++ b/project main/Login-Register.html
@@ -24,6 +24,7 @@
 					<div class="card2 card border-0 px-4 py-5">
 						<div class="row mb-4 px-3">
 							<h1 class="mb-0 mr-4 mt-3">Sign in Holoshop </h1>
+							<p>Thank you for supporting and trusting to buy at <a href="test.html">Holoshop</a></p>
 							</div>
 						</div>
 						<div class="row px-3"> <label class="mb-1">
