--- a/project main/Feedback.html
+++ b/project main/Feedback.html
@@ -93,77 +93,9 @@
 	  
   <div name = "content" class="col-9 ">
 		<div class="container mt-3">
-      <div class="row">
-        <div class="col-12">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/banner-computer.jpg" alt="First slide">
-                <div class="carousel-caption d-block">
-                  <h5><span>Laptop Asus Lamborghini VX7</span></h5>
-                  <p><span>Break All Configurations</span></p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner-camera.jpg" alt="Second slide">
-                <div class="carousel-caption d-block">
-                  <h5>Sony Alpha A7 Kit 28-70mm</h5>
-                  <p>Removable Lens</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner-combo.jpg" alt="Third slide">
-                <div class="carousel-caption d-block">
-                  <h5>Rampage MEEPO PLUS Combo</h5>
-                  <p>Best Price</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div>
+
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/free-ship.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Free Shipping</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/free-return.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Free Returns</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" alt="Free Shipping" src="images/low-price.png"></div>
-            <div class="col-lg-6 col-10 ml-1">
-              <h4>Low Prices</h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </div>
     <hr>
    <div class="container">
@@ -175,15 +107,34 @@
 		are real and link directly to our Google page It is our goal to make your experience a purchase camera and
 		laptop first, so the next time you decide to purchase our laptop, you will satisfy with our service.</p>
 		<h4>Google Rating <img class="img-vote" src="images/google-vote.jpg"></h4>
-		<p>This is the easiest process I’ve ever experienced. Great customer service all around. Website simple and
-		easy use.Great customer service very good.Will definitely be purchase them again!! I like Holoshop .	
+		<h4>Mark S.Cobubu,India <img src="images/icon-date.png" width="23" height="24"> January 01,2021</h4>
+		<p>My experience was excellent.I bought laptop Acer Swift 3X SF314-510G-57MR yesterday. I take it very quickly.
+			Nine days later, the money was in my PayPal account. All good.
 		</p>
-		<h4> <img src="images/people-vote.png"> Peter D.</h4><br>
+		<br>
+		<h4>Adrienne K. ,USA <img src="images/icon-date2.png" width="23" height="24"> March 31,2021</h4>
+		<p>Very smooth experience, particularly during a pandemic when it's hard to find good customer service. 
+		I received an email alerting me that they had received my device. I had subcribed about delivery in Holoshop. It's too fast.</p>
+		<br>
+		<h4>Anthony Nixon, Campuchia <img src="images/icon-date3.png" width="23" height="24"> Jun 21,2021</h4>
+		<p>Quick responses and service. Got a higher quote than expected. Very satisfied and will always come back here to sell my used laptops.</p>
+		<br>
+		<h4>Kristem Peam, Lao <img src="images/icon-date4.png" width="23" height="24"> Jun 17, 2021</h4>
+		<p>Fast and easy. I got paid for what I thought was junk!I am so glad I came across this shop.  Great customer service! Highly recommend!
+		I received what was originally quoted, without any issues.
+		</p>
+		<br>
+		<h4> <img src="images/people-vote.png"> Peter D.</h4>
+		<p>This is the easiest process I’ve ever experienced. Great customer service all around. Website simple and
+			easy use.Great customer service very good.Will definitely be purchase them again!! I like Holoshop .	
+		</p>
+		<br>
+		<h4><img src="images/riview-people2.png"> Banesco D.</h4>
 		<p>Very easy to buy laptop and camera in Holoshop. Website is simple to navigate and messaging system makes for 
 		a more direct means to contact the company with questions. I will buy laptop anything I need in the furute .</p>
-		<h4><img src="images/riview-people2.png">  Banesco D.</h4><br>
-		<p>I bought a laptop in Holoshop yesterday. I like our service. I were buy quickly. Thank you to Holoshop !</p>
+		<br>
 		<h4><img src="images/review-people3.png">Jackie C.</h4>
+		<p>I bought a laptop in Holoshop yesterday. I like our service. I were buy quickly. Thank you to Holoshop !</p>
 		
    </div>
 
