--- a/project main/Login-Register.html
+++ b/project main/Login-Register.html
@@ -35,10 +35,10 @@
         <input class="mb-4" type="email" name="email" placeholder="Enter email address" checked>
         <div class="row px-3">
           <label class="mb-1">
-          <h6 class="mb-0 text-sm">Password</h6>
+          <h6 class="mb-0 text-sm">Password</h6></label>
         </div>
-        <label>
-        	<input type="password" name="password" placeholder="Enter password" checked>
+        
+       	<input type="password" name="password" placeholder="Enter password" checked>
         	<div class="row px-3 mb-4">
          	<div class="custom-control custom-checkbox custom-control-inline">
             <input id="chk1" type="checkbox" name="chk" class="custom-control-input">
@@ -48,7 +48,11 @@
         <div class="row mb-3 px-3">
           <button type="submit" class="btn btn-info text-center">Login</button>
         </div>
-        <div class="row mb-4 px-3"> <small class="font-weight-bold">Don't have an account? <a class="text-danger ">Register</a></small> </div>
+        <div class="row mb-4 px-3"> 
+			<small class="font-weight-bold">Don't have an account? 
+				<a class="text-danger ">Register</a>
+			</small> 
+		</div>
       </div>
     </div>
   </div>
@@ -57,7 +61,7 @@
       <div class="social-contact ml-4 ml-sm-auto"> <span class="fa fa-facebook mr-4 text-sm"></span> <span class="fa fa-google-plus mr-4 text-sm"></span> <span class="fa fa-linkedin mr-4 text-sm"></span> <span class="fa fa-twitter mr-4 mr-sm-5 text-sm"></span> </div>
     </div>
   </div>
-  <div class="backto-home"><a href="test.html"> >>>Back to home </a></div>
+  <div class="backto-home"><a href="test.html"> &gt;&gt;&gt;Back to home</a></div>
 </div>
 </body>
 </html>
