--- a/project main/Login-Register.html
+++ b/project main/Login-Register.html
@@ -10,8 +10,6 @@
 <script src='main.js'></script>
 </head>
 <body>
-
-
 <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
   <div class="card card0 border-0">
     <div class="row d-flex">
@@ -35,12 +33,12 @@
         <input class="mb-4" type="email" name="email" placeholder="Enter email address" checked>
         <div class="row px-3">
           <label class="mb-1">
-          <h6 class="mb-0 text-sm">Password</h6></label>
+          <h6 class="mb-0 text-sm">Password</h6>
+          </label>
         </div>
-        
-       	<input type="password" name="password" placeholder="Enter password" checked>
-        	<div class="row px-3 mb-4">
-         	<div class="custom-control custom-checkbox custom-control-inline">
+        <input type="password" name="password" placeholder="Enter password" checked>
+        <div class="row px-3 mb-4">
+          <div class="custom-control custom-checkbox custom-control-inline">
             <input id="chk1" type="checkbox" name="chk" class="custom-control-input">
             <label for="chk1" class="custom-control-label text-sm">Remember me</label>
           </div>
@@ -48,11 +46,7 @@
         <div class="row mb-3 px-3">
           <button type="submit" class="btn btn-info text-center">Login</button>
         </div>
-        <div class="row mb-4 px-3"> 
-			<small class="font-weight-bold">Don't have an account? 
-				<a class="text-danger ">Register</a>
-			</small> 
-		</div>
+        <div class="row mb-4 px-3"> <small class="font-weight-bold">Don't have an account? <a class="text-danger ">Register</a> </small> </div>
       </div>
     </div>
   </div>
@@ -65,4 +59,3 @@
 </div>
 </body>
 </html>
-
