--- a/project main/Login-Register.html
+++ b/project main/Login-Register.html
@@ -15,7 +15,7 @@
     <div class="row d-flex">
       <div class="col-lg-6">
         <div class="card1 pb-5">
-          <div id ="logo"> <img src="images/main logo.png" alt="sample logo" > </div>
+          <div id ="logo"> <a href="test.html"><img src="images/main logo.png" alt="sample logo" ></a> </div>
           <div class="img-login"> <img src="images/img-login.jpg" width="500" height="410"> </div>
         </div>
       </div>
