--- a/project main/test.html
+++ b/project main/test.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div name="header-LOGO" style ="height: 100px; width: 100%">
-  <div id ="logo"> <img src="images/main logo.png" alt="sample logo" > </div>
+  <div id ="logo"><a href="test.html" > <img src="images/main logo.png" alt="sample logo" ></a> </div>
   <div id ="headerLinks"> <a href="Login-Register.html" title="Register-login">Register/Login</a> <a href="#" title="Cart">Cart</a></div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -42,7 +42,9 @@
   </div>
 </nav>
 <div class="row">
-  <div name ="left" id="left" class="col-2 text-center ml-3" > <a target="_blank" href="https://genshin.mihoyo.com/en/download"> <img class="w-100 h-auto mt-xl-2 rounded" src="images/Ad-0.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=8"> <img class=" w-100 h-auto mt-xl-5 rounded" src="images/Ad-1.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=17"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-2.png" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=11"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-3.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=14"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-4.png" alt=""></a> </div>
+  <div name ="left" id="left" class="col-2 text-center ml-3" >
+	  <iframe src="https://giphy.com/embed/l378nXMQQwDZT51iU" width="100%" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+	  <a target="_blank" href="https://genshin.mihoyo.com/en/download"> <img class="w-100 h-auto mt-xl-2 rounded" src="images/Ad-0.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=8"> <img class=" w-100 h-auto mt-xl-5 rounded" src="images/Ad-1.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=17"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-2.png" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=11"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-3.jpg" alt=""></a> <a target="_blank" href="https://genshin.mihoyo.com/en/character/mondstadt?char=14"> <img class="w-100 h-auto mt-xl-5 rounded" src="images/Ad-4.png" alt=""></a> </div>
   <div name = "content" class="col-9 ">
     <div class="container mt-3">
       <div class="row">
