--- a/project main/About us.html
+++ b/project main/About us.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HOLOSHOP</title>
+    <title>About us HOLOSHOP</title>
 	  <link rel="icon" href="images/favicon.png" type="image/x-icon"/>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
@@ -15,7 +15,7 @@
   <body>
 	  <div name="header-LOGO" style ="height: 100px; width: 100%">
 		  	<div id ="logo">
-				<img src="images/main logo.png" alt="sample logo" >
+				<a href="test.html" > <img src="images/main logo.png" alt="sample logo" ></a>
 		  	</div>
 	  		<div id ="headerLinks">
 				
@@ -173,17 +173,17 @@
 			  <li class="btn-link"> <a>News</a></li>
               <li class="btn-link"> <a>Camera</a></li>
               <li class="btn-link"> <a>Computer</a></li>
-			  <li class="btn-link"><a>Shipping and return</a></li>
+			  <li class="btn-link"><a href="Shipping.html">Shipping and return</a></li>
               <li class="btn-link"> <a>Device</a></li>
             </ul>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-4 col-12">
             <ul class="list-unstyled">
               <h3>Company</h3>
-			  <li class="btn-link"> <a>Career</a></li>
+			  <li class="btn-link"> <a href="Carrer.html">Career</a></li>
               <li class="btn-link"> <a href="About us.html">About us</a></li>
-			  <li class="btn-link"> <a></a>Term</li>
-              <li class="btn-link"> <a>Policy</a></li>
+			  <li class="btn-link"> <a href="Term.html">Term</a></li>
+              <li class="btn-link"> <a href="policy.html">Policy</a></li>
               <li class="btn-link"> <a>Contact us</a></li>
               <li class="btn-link"> <a href="Feedback.html">Feedbacks</a></li>
             </ul>
