--- a/project main/test.html
+++ b/project main/test.html
@@ -15,7 +15,7 @@
   <body>
 	  <div name="header-LOGO" style ="height: 100px; width: 100%">
 		  	<div id ="logo">
-				<img src="images/main logo.png" alt="sample logo" >
+				<a href="test.html" > <img src="images/main logo.png" alt="sample logo" ></a>
 		  	</div>
 	  		<div id ="headerLinks">
 				
@@ -322,8 +322,9 @@
               <img class="mr-3" src="images/cannon-kit-rf24.jpg" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Camera Canon EOS RP kit RF24-105mm F4-7.1 IS STM</h5>
-				26.2MP full-frame CMOS sensor. DIGIC 8 image processor. ISO: 100 - 40,000 (possible) expandable to 50, 51200, 102,400. 
-				Vari-Angle touch screen. Dual Pixel CMOS AF focusing system. 4K video support. Weight: 485g
+				26.2MP full - frame CMOS sensor. DIGIC 8 image processor. ISO: 100 - 40,000 (possible) expandable to 50, 51200, 102,400. 
+				Vari-Angle touch screen. Dual Pixel CMOS AF focusing system. 4K video support. Weight: 485g . Rechargeable Battery
+
               </div>
             </li>
             <li class="media">
@@ -361,17 +362,17 @@
 			  <li class="btn-link"> <a>News</a></li>
               <li class="btn-link"> <a>Camera</a></li>
               <li class="btn-link"> <a>Computer</a></li>
-			  <li class="btn-link"><a>Shipping and return</a></li>
+			  <li class="btn-link"><a href="Shipping.html">Shipping and return</a></li>
               <li class="btn-link"> <a>Device</a></li>
             </ul>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-4 col-12">
             <ul class="list-unstyled">
               <h3>Company</h3>
-			  <li class="btn-link"> <a>Career</a></li>
+			  <li class="btn-link"> <a href="Carrer.html">Career</a></li>
               <li class="btn-link"> <a href="About us.html">About us</a></li>
-			  <li class="btn-link"> <a></a>Term</li>
-              <li class="btn-link"> <a>Policy</a></li>
+			  <li class="btn-link"> <a href="Term.html">Term</a></li>
+              <li class="btn-link"> <a href="policy.html">Policy</a></li>
               <li class="btn-link"> <a>Contact us</a></li>
               <li class="btn-link"> <a href="Feedback.html">Feedbacks</a></li>
             </ul>
