--- a/project main/Feedback.html
+++ b/project main/Feedback.html
@@ -15,7 +15,7 @@
   <body>
 	  <div name="header-LOGO" style ="height: 100px; width: 100%">
 		  	<div id ="logo">
-				<a href="test.html" > <img src="images/main logo.png" alt="sample logo" ></a> </div>
+				<a href="test.html" > <img src="images/main logo.png" alt="sample logo" ></a> 
 		  	</div>
 	  		<div id ="headerLinks">
 				<a href="Login-Register.html" title="Login/Register">Login/Register</a>
