complete front end

--- a/project main/acer.html
+++ b/project main/acer.html
@@ -242,7 +242,7 @@
             <ul class="list-unstyled">
               <h3>Menu</h3>
               <li class="btn-link"> <a href="test.html">Home</a></li>
-			  <li class="btn-link"> <a>News</a></li>
+			  <li class="btn-link"> <a href="news.html">News</a></li>
               <li class="btn-link"> <a>Camera</a></li>
               <li class="btn-link"> <a>Computer</a></li>
 			  <li class="btn-link"><a href="Shipping.html">Shipping and return</a></li>
