--- a/project main/news.html
+++ b/project main/news.html
@@ -116,9 +116,48 @@
 	<div class="container-news">
 		<div class="current-news">
 			<h2 >News</h2>
-			<p>6 posts</p>
+			<p>4 posts</p>
 		</div>
-			
+		<div class="event-news">
+		<a href="#"><img src="images/banner-computer.jpg" width="500" height="300"></a>	
+		<div class="detail-news">
+		<p>News</p>
+		<h2><a href="#">Laptop Asus Lamborghini VX7</a></h2>
+		<span>3 days ago</span>
+		<p class="more-detail">When you've got a high-performance notebook, why not make it look like a high-performance car? 
+		The ASUS Automobili Lamborghini VX7 takes all the internal.</p>
+	</div>
+	</div>
+	    <div class="event-news">
+			<a href="#"><img src="images/canon-news.jpg" width="500" height="300"></a>	
+		<div class="detail-news">
+		<p>News</p>
+		<h2><a href="#">Canon EOS R6</a></h2>
+		<span>2 weeks ago</span>
+		<p class="more-detail">While the Canon EOS R5 is overkill for most people, the EOS R6 is a more affordable 
+			full-frame alternative that is simply one of the best cameras you can buy today.</p>
+	</div>
+		</div>
+		<div class="event-news">
+			<a href="#"><img src="images/macbook-news.jpg" width="500" height="300"></a>	
+		<div class="detail-news">
+		<p>News</p>
+		<h2><a href="#">13-inch MacBook Air</a></h2>
+		<span>4 weeks ago</span>
+		<p class="more-detail">For $1,299, the 13-inch MacBook Pro adds a graphics core and a cooling system that lets it take on more intense tasks   
+			It's a true portable powerhouse with a battery that can last for days.</p>
+	</div>
+		</div>
+		<div class="event-news">
+			<a href="#"><img src="images/sony-news.jpg" width="500" height="300"></a>	
+		<div class="detail-news">
+		<p>News</p>
+		<h2><a href="#">Sony A6100</a></h2>
+		<span>1 month ago</span>
+		<p class="more-detail">Since its launch five years ago, the entry-level Sony A6000 has proven a hugely popular mirrorless camera. Its successor, 
+			the A6100, takes the existing recipe and adds several tweaks that help it compete with today’s mirrorless pack.</p>
+	</div>
+		</div>
 	</div>
 	</div>
 
@@ -140,7 +179,7 @@
             <ul class="list-unstyled">
               <h3>Menu</h3>
               <li class="btn-link"> <a href="test.html">Home</a></li>
-			  <li class="btn-link"> <a>News</a></li>
+			  <li class="btn-link"> <a href="news.html">News</a></li>
               <li class="btn-link"> <a>Camera</a></li>
               <li class="btn-link"> <a>Computer</a></li>
 			  <li class="btn-link"><a href="Shipping.html">Shipping and return</a></li>
